[gd_scene load_steps=8 format=3 uid="uid://c0y2ihbntdkuc"]

[ext_resource type="StyleBox" uid="uid://dwxqhhtunho3f" path="res://ui/resources/dialog_styles.tres" id="1_fak0m"]
[ext_resource type="Script" uid="uid://h0yu44vvrsrk" path="res://ui/views/vehicle_popup_view/vehicle_popup_view.gd" id="2_2jm7u"]
[ext_resource type="Texture2D" uid="uid://colv4c8bi5jc0" path="res://assets/ui_icons/close.png" id="2_21yla"]
[ext_resource type="Texture2D" uid="uid://ch7h2yiicuahf" path="res://assets/ui_icons/keep_off.png" id="3_2i1xd"]
[ext_resource type="Texture2D" uid="uid://ciu6pqreygc85" path="res://assets/ui_icons/delete.png" id="3_kk4e6"]
[ext_resource type="Texture2D" uid="uid://co787ad4651pi" path="res://assets/ui_icons/route.png" id="4_qwaqe"]
[ext_resource type="Texture2D" uid="uid://b2ucwghxcyr4r" path="res://assets/ui_icons/debugger.png" id="7_2i1xd"]

[node name="VehiclePopupView" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_right = -752.0
offset_bottom = -407.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_fak0m")
script = ExtResource("2_2jm7u")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="MainFlowContainer" type="BoxContainer" parent="MarginContainer"]
layout_mode = 2
vertical = true

[node name="HeaderBoxContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HeaderTitle" type="Label" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
text = "Vehicle"

[node name="IdLabel" type="Label" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "#1"

[node name="PinButton" type="Button" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
icon = ExtResource("3_2i1xd")
flat = true

[node name="CloseButton" type="Button" parent="MarginContainer/MainFlowContainer/HeaderBoxContainer"]
layout_mode = 2
icon = ExtResource("2_21yla")
flat = true

[node name="MainContentContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="PropertiesContainer" type="BoxContainer" parent="MarginContainer/MainFlowContainer/MainContentContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
vertical = true

[node name="TripProgressBar" type="ProgressBar" parent="MarginContainer/MainFlowContainer/MainContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ToolBoxPanel" type="BoxContainer" parent="MarginContainer/MainFlowContainer"]
layout_mode = 2

[node name="DeleteButton" type="Button" parent="MarginContainer/MainFlowContainer/ToolBoxPanel"]
layout_mode = 2
icon = ExtResource("3_kk4e6")
flat = true

[node name="ShowRouteButton" type="Button" parent="MarginContainer/MainFlowContainer/ToolBoxPanel"]
layout_mode = 2
icon = ExtResource("4_qwaqe")
flat = true

[node name="DebuggerButton" type="Button" parent="MarginContainer/MainFlowContainer/ToolBoxPanel"]
layout_mode = 2
icon = ExtResource("7_2i1xd")
flat = true
